--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,10 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/external/etl etl)
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     src/main.cpp
+    src/active_scheduler.cpp
+    src/active_task.cpp
     src/interrupt.cpp
-    src/tasks.cpp
+    src/scheduler_router.cpp
 )
 
 # Configure ETL
