--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,67 +1,24 @@
 cmake_minimum_required(VERSION 3.22)
 
-#
-# This file is generated only once,
-# and is not re-generated if converter is called multiple times.
-#
-# User is free to modify the file as much as necessary
-#
+project(ActiveLibrary)
+add_library(${PROJECT_NAME} INTERFACE)
+set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
-# Setup compiler settings
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_EXTENSIONS ON)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS ON)
+enable_language(C CXX ASM)
 
-# Define the build type
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "Debug")
-endif()
-
-# Set the project name
-set(CMAKE_PROJECT_NAME EtlInvestigations)
-
-# Enable compile command to ease indexing with e.g. clangd
-set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
-
-# Copy compile_commands.json to root directory
-add_custom_target(copy-compile-commands ALL
-    ${CMAKE_COMMAND} -E copy_if_different
-    ${CMAKE_BINARY_DIR}/compile_commands.json
-    ${CMAKE_SOURCE_DIR}/compile_commands.json
-    DEPENDS ${CMAKE_BINARY_DIR}/compile_commands.json)
-
-# Core project settings
-project(${CMAKE_PROJECT_NAME})
-message("Build type: " ${CMAKE_BUILD_TYPE})
-
-# Enable CMake support for ASM and C languages
-enable_language(C ASM CXX)
-
-# Create an executable object type
-add_executable(${CMAKE_PROJECT_NAME})
-
-# Add ETL
-add_subdirectory(${CMAKE_SOURCE_DIR}/external/etl etl)
-
-# Add sources to executable
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE
-    example/example.cpp
-    example/interrupt.cpp
-
-    example/motor_control/motor_control_task.cpp
-    example/motor_control/motor_control_adapter.cpp
-
-    example/pedal_position/pedal_position_task.cpp
-    example/pedal_position/pedal_position_adapter.cpp
+target_compile_definitions(${PROJECT_NAME} INTERFACE
 )
 
-# Configure ETL
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE etl::etl)
-target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
+target_include_directories(${CMAKE_PROJECT_NAME} INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}/external/etl/include
     ${CMAKE_CURRENT_SOURCE_DIR}/incl
-    ${CMAKE_CURRENT_SOURCE_DIR}/example
 )
+
+target_sources(${CMAKE_PROJECT_NAME} INTERFACE
+)
+
+target_link_directories(${PROJECT_NAME} INTERFACE
+)
+
+target_link_libraries(${CMAKE_PROJECT_NAME} INTERFACE etl)
+
