--- a/scripts/uart.yaml
+++ b/scripts/uart.yaml
@@ -2,7 +2,7 @@ HEADER:
   type: UART
 # Diagnostics
 status_msg:
-  full_name: Status message
+  name: Status message
   id: 0x01
   source: all
   target: logger
@@ -11,14 +11,14 @@ status_msg:
     - unknown_message_counter: uint32_t
 # Data transfer
 pedal_position:
-  full_name: Pedal position
+  name: Pedal position
   id: 0x02
   source: measurement_board
   target: control_board
   payload:
     - position: float
 steering_wheel:
-  full_name: Steering wheel angle
+  name: Steering wheel angle
   name: 
   id: 0x03
   source: measurement_board
@@ -26,7 +26,7 @@ steering_wheel:
   payload:
     - angle: float
 reset_pedal_position:
-  full_name: Reset pedal position
+  name: Reset pedal position
   name: 
   id: 0x04
   source: control_board
