--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
 enable_language(C CXX ASM)
 
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/external/etl etl)
-
 target_compile_definitions(${PROJECT_NAME} PRIVATE
 )
 
@@ -24,5 +22,5 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
 target_link_directories(${PROJECT_NAME} PRIVATE
 )
 
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE etl)
+target_link_libraries(${CMAKE_PROJECT_NAME})
 
